--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
               <img src="12c.png" alt="Logo_12coeur"> 
               <div class="sensor-data" id="accelerometer-data">Accéléromètre: N/A</div>
               <div class="sensor-data" id="gyroscope-data">Gyroscope: N/A</div>
-              <script src="sensors.js">
+              <script src="sensors.js"></script>
     </main>
 
 
